# hacktrace-nova

./: .env  .env.example  .gitignore  .gitmodules  README.md  config.yaml  main.py  pyproject.toml  query.py
docs/: BUILD_PLAN.md  DATASET_ANALYSIS.md  EVAL_PLAN.md
eval/: error_analysis.py  ground_truth.json  run_eval.py
nova-debate-arena/: .env.example  Dockerfile  README.md  requirements.txt
nova-debate-arena/backend/: main.py
nova-debate-arena/docs/: PLAN.md
nova-debate-arena/frontend/: app.js  index.html  style.css
nova-debate-arena/scripts/: run_cli.py
nova-debate-arena/src/nova_debate/: __init__.py  agents.py  data.py  orchestrator.py  schemas.py
src/: main.py
src/agents/: __init__.py  foreperson.py  jury.py  parser.py
src/audio/: __init__.py  tts.py
src/config/: loader.py
src/data/: __init__.py  loader.py
src/prompts/: __init__.py  foreperson.txt  parser.txt
src/prompts/jury/: context.txt  debate_status_check.txt  debate_template.txt  literal.txt  sceptic.txt  steelman.txt  vote_template.txt
src/schemas/: __init__.py  debate_status.py  fact_frame.py  jury_output.py  verdict.py
src/workflow/: __init__.py  debate.py  graph.py  state.py  vote.py
